<resources>
    <string name="app_name">Departments</string>
    <string name="departments_application">Departments Application</string>
    <string name="application_version_string">Version 1.0.0</string>

    <!--RequestConstants-->
    <string name="success_registration">Account Created!</string>
    <string name="fail_registration">Something went wrong</string>
    <string name="success_authentication">Success Authentication</string>
    <string name="bad_authentication">Bad Authentication</string>

    <!--AppConstants-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="registration">Registration</string>
    <string name="create_new_account">Create new account</string>
    <string name="create_account">Create Account</string>
    <string name="employee_email">Email:</string>
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="address">Address:</string>
    <string name="state_province">State Province:</string>
    <string name="postal_code">Postal Code:</string>
    <string name="employees">Employees</string>
    <string name="jobs">Jobs</string>
    <string name="surname">Surname:</string>
    <string name="email">Email</string>
    <string name="phone">Phone:</string>
    <string name="salary">Salary</string>
    <string name="tasks">Tasks</string>
</resources>
