<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".LoginFragment">
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:id="@+id/sign_in_login"
                    android:hint="@string/login" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:id="@+id/sign_in_password"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/ButtonStyle"
                android:layout_width="250dp"
                android:layout_margin="15dp"
                android:id="@+id/sign_in_button"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_account_button"
                android:textAllCaps="false"
                android:background="@null"
                android:textColor="@color/colorAccent"
                android:text="@string/create_new_account"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>